# topdm.uz

./: .clinerules  .dockerignore  .env.core.example  .env.example  .env.local-prod.example  .env.production.example  .env.web.example  .gitignore  LAUNCH_CHECKLIST.md  LICENSE  Makefile  README.md  docker-compose.core.yml  docker-compose.local-prod.yml  docker-compose.prod.yml  docker-compose.web.yml  docker-compose.yml  package-lock.json  split-hosts.env.example
backend/: .env.example  Dockerfile  Dockerfile.celery  Dockerfile.prod  README.md  alembic.ini  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
backend/app/: main.py
backend/app/ai/: __init__.py  catalog_truth.py  config.py  intent_analyzer.py  wardrobe_search.py  wardrobe_session.py
backend/app/api/: __init__.py  orders.py
backend/app/core/: bootstrap.py  client_context.py  config.py  logging_config.py  phone.py  sentry_init.py  slug.py  upload_validation.py
backend/app/models/: __init__.py  business_rule.py  campaign.py  delivery_claim.py  finance.py  merchant_notification.py  merchant_support.py  order_checkout_payment.py  payments.py  premium_banner.py  product_review.py  reels.py  shop_review.py  story.py  topdmbozor.py  transaction_ledger.py
backend/app/schemas/: __init__.py  delivery.py  merchants.py  orders.py  premium_market.py  topdmbozor.py
backend/app/services/: dispatcher.py  groq_stylist.py  inventory.py  semantic_guardrails.py  stylist.py  yandex_delivery.py
backend/migrations/: 001_init_pgvector.sql  env.py
backend/migrations/versions/: 0001_initial_models.py  0002_marketplace_core_tables.py  0003_phase4_shops_orders.py  0004_indoor_map_engine.py  0037_viral_growth.py  (+44 more)
backend/src/: __init__.py
backend/tests/: test_ai_moderator.py  test_bbox_refine.py  test_bts_delivery.py  test_category_resolver.py  test_category_size_presets.py  test_click_business.py  test_click_verify.py  test_image_panels.py  test_inventory_sku_fallback.py  test_map_stall_normalize.py  test_marketplace_repo_slugify.py  test_merchant_debt.py  test_merchant_location.py  test_order_expiry_task.py  test_order_pickup_expiry.py  test_order_refund_and_catalog.py  test_order_telegram_actions.py  test_phone_normalize.py  test_pickup_qr.py  test_product_hashtags.py  test_product_markup.py  test_product_moderation_flow.py  test_product_photo_search.py  test_product_variants.py  test_rule_engine.py  test_stylist_pick_validator.py  test_support_ai.py  test_telegram_variant_draft.py  test_transaction_splitter.py  test_upload_validation.py  test_wallet_repo_lock.py  test_warehouse_stock.py  test_yandex_delivery_engine.py
bozor_ai_engine/: Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml
bozor_ai_engine/alembic/: env.py
bozor_ai_engine/app/: main.py
bozor_ai_engine/migrations/: 001_init.sql
(+1082 files in other folders)
