[project]
name = "bozor-ai-engine-backend"
version = "0.1.0"
description = "Bozor-AI Engine core backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "pgvector>=0.3.4",
  "redis>=5.0.8",
  "langchain>=0.2.16",
  "langgraph>=0.2.14",
  "google-generativeai>=0.8.6",
  "tenacity>=9.0.0",
  "pillow>=10.4.0",
  "httpx>=0.27.0",
  "python-telegram-bot>=21.4",
  "orjson>=3.10.7",
  "python-jose[cryptography]>=3.3.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["migrations*", "tests*"]
