[project]
name = "bozor-ai-engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "sqlalchemy[asyncio]>=2.0.32",
  "asyncpg>=0.29.0",
  "alembic>=1.13.2",
  "pgvector>=0.3.4",
  "redis>=5.0.8",
  "celery>=5.4.0",
  "langchain>=0.2.16",
  "langgraph>=0.2.14",
  "anthropic>=0.34.2",
  "google-generativeai>=0.7.2",
  "orjson>=3.10.7",
]
